# amazon-bedrock-agentcore-samples

./: .gitignore  main.py  pyproject.toml
01-tutorials/: README.md
01-tutorials/01-AgentCore-runtime/01-hosting-agent/01-strands-with-bedrock-model/: .bedrock_agentcore.yaml  Dockerfile  requirements.txt  runtime_with_strands_and_bedrock_models.ipynb  strands_claude.py
01-tutorials/01-AgentCore-runtime/01-hosting-agent/02-langgraph-with-bedrock-model/: .bedrock_agentcore.yaml  Dockerfile  langgraph_bedrock.py  runtime_with_langgraph_and_bedrock_models.ipynb
01-tutorials/01-AgentCore-runtime/01-hosting-agent/03-strands-with-openai-model/: runtime_with_strands_and_openai_models.ipynb  strands_agents_openai.py
01-tutorials/01-AgentCore-runtime/01-hosting-agent/04-crewai-with-bedrock-model/: runtime-with-crewai-and-bedrock-models.ipynb
01-tutorials/01-AgentCore-runtime/01-hosting-agent/04-crewai-with-bedrock-model/research_crew/: crew.py  main.py
01-tutorials/02-AgentCore-gateway/01-transform-lambda-into-mcp-tools/: 01-gateway-target-lambda.ipynb
01-tutorials/02-AgentCore-gateway/02-transform-apis-into-mcp-tools/02-transform-openapi-into-mcp-tools/: 01-openapis-into-mcp-api-key.ipynb
01-tutorials/02-AgentCore-gateway/03-search-tools/: 01-gateway-search.ipynb
01-tutorials/03-AgentCore-identity/03-Inbound Auth example/: inbound_auth_runtime_with_strands_and_bedrock_models.ipynb
01-tutorials/05-AgentCore-tools/01-Agent-Core-code-interpreter/01-file-operations-using-code-interpreter/: file-operations-using-code-interpreter.ipynb
